Fix CSS and visibility rules for cart page features.

--- a/src/main/webapp/css/cart.css
+++ b/src/main/webapp/css/cart.css
@@ -1,23 +1,89 @@
-table {
-    padding: 3px;
-    border: 1px solid black;
-    margin: 50px 100px;
+#cartDescription {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-td, th {
+#cartContents {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+#cartTotals {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+            border: 1px solid aliceblue
+
+}
+#cartActions {
+    margin: 50px;
+    display: flex;
+    justify-content: space-around
+}
+
+
+.normal2xButton {
+    border: 1px solid #979797;
+    font-weight: bold;
+    font-size: 18px;
+    color: #303216;
+    text-align: center;
+    background: #D8D8D8;
+    border-radius: 3px;
+
+    width: 280px;
+    height: 50px;
+}
+
+.normal2xButton:hover {
+    background: #A7A7A7;
+}
+
+.emphasized2xButton {
+    border: 1px solid #979797;
+    font-weight: bold;
+    font-size: 18px;
+    color: white;
+    text-align: center;
+    background: #71B869;
+    border-radius: 3px;
+
+    width: 280px;
+    height: 50px;
+}
+
+.emphasized2xButton:hover {
+    background: #5D9756;
+}
+
+
+#cartContents table {
+    padding: 3px;
+    border: 1px solid red;
+    margin: 50px 50px;
+}
+
+#cartContents td, #cartContents th {
     border: 1px solid #ddd;
     padding: 8px;
 }
 
-tr:nth-child(even){background-color: #f2f2f2;}
+#cartContents tr:nth-child(even){background-color: #f2f2f2;}
 
-tr:hover {background-color: #ddd;}
+#cartContents tr:hover {background-color: #ddd;}
 
-th {
+#cartContents th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #4CAF50;
+    background-color: #5D9756;
     color: white;
 }
 
+#cartContents input[type="number"] {
+    width: 50px;
+}
