--- a/src/main/webapp/css/product.css
+++ b/src/main/webapp/css/product.css
@@ -66,6 +66,20 @@
 }
 
 .productCost .ggPointsBadge {
+     height: 30px;
+     width: 30px;
+     background-color: #CAF898;
+     border-radius: 50%;
+     border: 1px solid #979797;
+
+     font-size: 24px;
+     font-weight: bold;
+     color: #896E45;
+     text-align: center;
+     margin-top: 20px;
+ }
+
+.productPoints {
     height: 30px;
     width: 30px;
     background-color: #CAF898;
@@ -76,5 +90,4 @@
     font-weight: bold;
     color: #896E45;
     text-align: center;
-    margin-top: 20px;
 }
